--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <a href="#" class="logo">Nero</a>
         <nav>
             <a href="#" class="active"> About Me</a>
-            <a href="#" >Skills</a>
-            <a href="#" >Education</a>
-            <a href="#" >Contact</a>
+            <a href="#"> Skills</a>
+            <a href="#"> Education</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
     <section class="aboutme">
@@ -29,9 +29,15 @@
             <p>Currently studying in 3rd year. I have tried many new things. Want to work independently Because working without pressure is really fun.</p>    
         <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
+    
+        <div class="skills-content">
+            <h1>What can be done</h1>
+            <p>- Draw<br>- write<br>- design<br>and whatever you want.</p>
+        </div>
+        <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
     </section>
 </body>
 </html>
